# brain_system_desktop_app

./: .gitignore  LICENSE  README.md  config.ini  main.py  pyproject.toml  readme.md  requirements.txt  setup.cfg
arduino_pro_micro/: arduino_pro_micro_sketch.ino
config/: config.py  config_parser.py  default_config.py  enums.py  handlers.py
core/: blocked_player_indicator.py  enums.py  mixins.py  timer.py  widgets.py
game_modes/: handlers_brain_ring.py  player.py
game_modes/brain_ring/: enums.py  game.py  handlers.py
game_modes/erudite/: enums.py  game.py  handlers.py
game_modes/what_where_when/: enums.py  game.py  handlers.py
hardware/arduino_pro_micro_sketch/: arduino_pro_micro_sketch.ino
hardware/circuit_board/: pro_micro_buttons.lay6
hardware/printed_parts/: arcade_button_based_on_PBS29B.FCStd  color_marker_for_mini_jack_plug.FCStd  controller_case.FCStd  player_button_case.FCStd
hardware/schematics/: circuit_schema.odg  circuit_schema.vsd
keyboard/: enums.py  handlers.py
sounds/: handlers.py
ui/: brain_ring_game_window.py  erudite_game_window.py  main_window.py  www_game_window.py
ui/autogenerated/: brain_ring_game_window.ui  brain_ring_game_window_autogenerated.py  bs_qt6.ui  erudite_game_window.ui  erudite_game_window_autogenerated.py  main_window_autogenerated.py  www_game_window.ui  www_game_window_autogenerated.py
ui/widgets/: base_classes_and_mixins.py  base_widgets.py  brain_ring_game_timer_widget.py  brain_ring_moderator_game_widget.py  brain_ring_moderator_timer_widget.py  erudite_game_timer_widget.py  icon_widgets.py  mixins.py  (+6 more)
