[project]
name = "brain-system-desktop-app"
requires-python = ">=3.12,<4.0"

dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)"
]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
isort = "^6.0.1"
flake8 = "^7.3.0"
flake8-type-checking = "^3.0.0"
flake8-isort = "^6.1.2"
wemake-python-styleguide = "^1.3.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
